--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,4 +26,4 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
     - name: Build with Gradle
-      run: ./gradlew clean build lib::LatestUpdatesFromStocks
+      run: ./gradlew clean build LatestUpdatesFromStocks
