--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,11 +11,7 @@ env:
 
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  workflow_dispatch:
 jobs:
   build:
 
